--- a/location/views/pages/newuser.pug
+++ b/location/views/pages/newuser.pug
@@ -1,5 +1,6 @@
 extends ../layout
 block content 
+  #newuser-banner
   .container.my-xl-5
     .row.justify-content-center
         .col-12 
@@ -8,7 +9,10 @@ block content
         .col-12 
           p &nbsp;
     .row.justify-content-center
-      .col-6
+        .col-12 
+          p &nbsp;
+    .row.justify-content-center
+      .col-6.newuser
         form.form-horizonal(action="/admin/new", method="post", enctype="multipart/form-data")
           if user._id
             input(type="hidden",name="movie[_id]",value=user._id)
@@ -29,9 +33,8 @@ block content
             .col-sm-10
               input#inputLanguage.form-control(type="text", name="user[notice]", value=user.notice)
           .form-group.row.justify-content-center
+            .col-12
+              p &nbsp;
             .col-sm-offset-2.col-sm-6
               button.btn.btn-outline-secondary.btn-block(type="submit") 录 入
-    .row
-      .col-12 &nbsp;
-      .col-12 &nbsp;
   script(src="/js/admin.js")
