--- a/location/public/css/main.css
+++ b/location/public/css/main.css
@@ -1,27 +1,27 @@
 @keyframes bg-scale
 {
-    from {transform: scale(1.0);}
-    to  {transform: scale(1.1);}
-    
+  from {transform: scale(1.0);}
+  to  {transform: scale(1.1);}
 }
- 
 @-webkit-keyframes bg-scale /* Safari 与 Chrome */
 {
-     from {transform: scale(1.0);}
-    to  {transform: scale(1.1);}
+  from {transform: scale(1.0);}
+  to  {transform: scale(1.1);}
 }
-
 @keyframes logo-rotate
 {
-    from {transform: rotate(0);}
-    to  {transform: rotate(360deg);}
-    
+  from {transform: rotate(0);}
+  to  {transform: rotate(360deg);}
 }
- 
 @-webkit-keyframes logo-rotate /* Safari 与 Chrome */
 {
-     from {transform: rotate(0);}
-    to  {transform: rotate(360deg);}
+  from {transform: rotate(0);}
+  to  {transform: rotate(360deg);}
+}
+@keyframes loading
+{
+  from {transform: rotate(0);}
+  to  {transform: rotate(360deg);}
 }
 #bg {
  position: absolute;
@@ -42,21 +42,18 @@
   background-size:100% 100%;
   background-repeat: no-repeat;
   animation-name: bg-scale;
-    animation-duration: 10s;
-    animation-timing-function: ease-in-out;
-    
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-play-state: running;
-    /* Safari 与 Chrome: */
-    -webkit-animation-name: bg-scale;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-timing-function: ease-in-out;
-   
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-play-state: running;
-  
+  animation-duration: 10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-play-state: running;
+  /* Safari 与 Chrome: */
+  -webkit-animation-name: bg-scale;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-play-state: running;
 }
 #index-bg-mask{
   position: absolute;
@@ -107,4 +104,58 @@
   width: 600px;
   height:400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.65);
+}
+
+/* newuser */
+.newuser {
+  padding: 60px 40px 40px ;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.65);
+  border-radius: 10px;
+  transition: all 0.3s;
+  background: #ffffff;
+}
+.newuser:hover {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.65);
+}
+
+#newuser-banner{
+  position: absolute;
+  height: 300px;
+  width: 100%;
+  background: #2C3E50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #FD746C, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #FD746C, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+/* new location */
+
+.newlocation {
+  padding: 40px 60px 10px;
+  margin-bottom: 20px;
+}
+.loading{
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 50%;
+  border: 5px solid rgb(203, 207, 211);
+  border-top: 5px solid #2C3E50;
+  animation-name: loading;
+  animation-duration: 10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  /* Safari 与 Chrome: */
+  -webkit-animation-name: loading;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-play-state: running;
+}
+locationUrl {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-break:break-all;
 }
