--- a/location/views/pages/admin.pug
+++ b/location/views/pages/admin.pug
@@ -31,9 +31,9 @@ block content
                 td #{moment(item.meta.updateAt).format('MM/DD HH:MM')}
                 td #{item.state}
                 td #{item.notice}
-                td: a(target="_blank",href="../movie/update/#{item._id}") 更新 
+                td: a.btn.btn-outline-warning.btn-sm.del(target="_blank",href="../../movie/#{item._id}") 更新 
                 td 
-                  button.btn.btn-danger.btn-sm.del(type="button",data-id="#{item._id}") 删除
+                  button.btn.btn-outline-danger.btn-sm.del(type="button",data-id="#{item._id}") 删除
     .row
       .col-12 
         span &nbsp;
