--- a/location/views/pages/detail.pug
+++ b/location/views/pages/detail.pug
@@ -1,5 +1,6 @@
 extends ../layout
 block content 
+  script(type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=80bbd5d97acd2cf92f006d611bc852f7")
   .container
     .row.justify-content-center
       .col-12 
