--- a/location/public/css/main.css
+++ b/location/public/css/main.css
@@ -1,45 +1,105 @@
-@keyframes bg-scale
-{
-  from {transform: scale(1.0);}
-  to  {transform: scale(1.1);}
+@keyframes bg-scale {
+  from {
+    transform: scale(1.0);
+  }
+  to {
+    transform: scale(1.1);
+  }
 }
-@-webkit-keyframes bg-scale /* Safari 与 Chrome */
-{
-  from {transform: scale(1.0);}
-  to  {transform: scale(1.1);}
+
+@-webkit-keyframes bg-scale
+/* Safari 与 Chrome */
+
+  {
+  from {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    -moz-transform: scale(1.0);
+    -ms-transform: scale(1.0);
+    -o-transform: scale(1.0);
+  }
+  to {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+  }
 }
-@keyframes logo-rotate
-{
-  from {transform: rotate(0);}
-  to  {transform: rotate(360deg);}
+
+@keyframes logo-rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-@-webkit-keyframes logo-rotate /* Safari 与 Chrome */
-{
-  from {transform: rotate(0);}
-  to  {transform: rotate(360deg);}
+
+@-webkit-keyframes logo-rotate
+/* Safari 与 Chrome */
+
+  {
+  from {
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+  }
 }
-@keyframes loading
-{
-  from {transform: rotate(0);}
-  to  {transform: rotate(360deg);}
+
+@-webkit-keyframes loading {
+  from {
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
 }
+  to {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+}
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 #bg {
- position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   overflow: hidden;
 }
+
 #index-bg {
- position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   overflow: hidden;
   background-image: url('../img/bg.png');
-  background-size:100% 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   animation-name: bg-scale;
   animation-duration: 10s;
@@ -55,7 +115,8 @@
   -webkit-animation-direction: alternate;
   -webkit-animation-play-state: running;
 }
-#index-bg-mask{
+
+#index-bg-mask {
   position: absolute;
   top: 0;
   left: 0;
@@ -63,76 +124,101 @@
   right: 0;
   background: rgba(0, 0, 0, 0.65)
 }
+
 #logo {
-   animation-name: logo-rotate;
-    animation-duration: 5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-play-state: running;
-    -webkit-animation-name: logo-rotate;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-play-state: running;
+  animation-name: logo-rotate;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  -webkit-animation-name: logo-rotate;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-play-state: running;
 }
-.headline{
+
+.headline {
   color: #ffffff;
   font-size: 56px;
   letter-spacing: 2px
 }
-.sec-headline{
+
+.sec-headline {
   color: #ffffff;
   font-size: 24px;
   letter-spacing: 2px
 }
 
-
 /* admin */
-.admin-adduser{
+
+.admin-adduser {
   margin-bottom: 10px
 }
-.mytable{
+
+.mytable {
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.65);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
-
 /* detail */
-#location{
+
+#location {
   background: #CCCCCC;
   width: 600px;
-  height:400px;
+  height: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.65);
+  border-radius: 10px;
+  overflow: hidden;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 /* newuser */
+
 .newuser {
-  padding: 60px 40px 40px ;
+  padding: 60px 40px 40px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.65);
   border-radius: 10px;
   transition: all 0.3s;
   background: #ffffff;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
+
 .newuser:hover {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.65);
 }
 
-#newuser-banner{
+#newuser-banner {
   position: absolute;
   height: 300px;
   width: 100%;
-  background: #2C3E50;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #FD746C, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #FD746C, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #2C3E50;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #FD746C, #2C3E50);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #FD746C, #2C3E50);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
 /* new location */
 
 .newlocation {
   padding: 40px 60px 10px;
   margin-bottom: 20px;
 }
-.loading{
+
+.loading {
   height: 40px;
   width: 40px;
   margin: 5px;
@@ -145,17 +231,23 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-play-state: running;
-  /* Safari 与 Chrome: */
+  /*Safari与Chrome:;
+  */
   -webkit-animation-name: loading;
   -webkit-animation-duration: 1s;
   -webkit-animation-timing-function: linear;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-play-state: running;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
+
 locationUrl {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  word-break:break-all;
+  word-break: break-all;
 }
