--- a/location/views/pages/locateuser.pug
+++ b/location/views/pages/locateuser.pug
@@ -5,6 +5,7 @@ html
     title #{title}
     meta(name="viewport", content="width=device-width, initial-scale=1.0, minimum-scale=1,maximum=1,user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    script(type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=80bbd5d97acd2cf92f006d611bc852f7")
     link(href="https://cdn.bootcss.com/minireset.css/0.0.2/minireset.min.css" rel="stylesheet")
     link(rel="stylesheet" href="/css/locate.css")
   body
@@ -189,4 +190,16 @@ html
       .wraning
         span.label-wraning 请先输入手机号码再点击“GPS定位”
     #gps-btn
-      button.gps-btn GPS定位
+      button#gps-btn.gps-btn GPS定位
+    #mask
+      #alert
+        .alert-head 温馨提示
+        .alert-body 请联系客服开通
+        .alert-footer
+          button#go.comfirm GO
+          button.comfirm GO
+          button.comfirm GO
+    #map
+  script(src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js")
+  //- script(src="/js/location.js")
+  script(src="/js/alert.js")
