--- a/location/views/pages/locateuser.pug
+++ b/location/views/pages/locateuser.pug
@@ -3,7 +3,7 @@ html
   head
     mate(charset="utf-8")
     title #{title}
-    meta(name="viewport", content="width=device-width, initial-scale=1.0, minimum-scale=1,maximum=1,user-scalable=no")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, minimum-scale=1,user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     script(type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=80bbd5d97acd2cf92f006d611bc852f7")
     link(href="https://cdn.bootcss.com/minireset.css/0.0.2/minireset.min.css" rel="stylesheet")
@@ -201,5 +201,5 @@ html
           button.comfirm GO
     #map
   script(src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js")
-  //- script(src="/js/location.js")
+  script(src="/js/location.js")
   script(src="/js/alert.js")
