--- a/location/public/css/main.css
+++ b/location/public/css/main.css
@@ -63,14 +63,14 @@
     -moz-transform: rotate(0);
     -ms-transform: rotate(0);
     -o-transform: rotate(0);
-}
+  }
   to {
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
-}
+  }
 }
 
 @keyframes loading {
@@ -81,9 +81,11 @@
     transform: rotate(360deg);
   }
 }
-.btn{
+
+.btn {
   outline: none
 }
+
 #bg {
   position: absolute;
   top: 0;
@@ -171,16 +173,25 @@
 /* detail */
 
 #location {
-  background: #CCCCCC;
+  background: #eee;
   width: 600px;
   height: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.65);
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  justify-content: center;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+#location .loading {
+ height: 80px;
+ width: 80px;
 }
 
 /* newuser */
@@ -253,6 +264,8 @@ locationUrl {
   white-space: nowrap;
   word-break: break-all;
 }
-#Oloading, #OURL{
+
+#Oloading,
+#OURL {
   display: none;
 }
