--- a/location/views/pages/detail.pug
+++ b/location/views/pages/detail.pug
@@ -14,6 +14,8 @@ block content
     .row
       .col-7
         #location
+          .loading 
+          p 地图加载中...
       .col-5
         dl.dl-horizontal
           dt 省/自治区/直辖市
