--- a/location/views/pages/admin.pug
+++ b/location/views/pages/admin.pug
@@ -11,7 +11,7 @@ block content
       .col-2
         button.btn.btn-outline-dark.btn-block 刷 新
       .col-2
-        a.btn.btn-outline-dark.btn-block(href="/newuser") 新 增 
+        a.btn.btn-outline-dark.btn-block(href="/admin/newuser") 新 增 
     .row.justify-content-center
       .col-12 
         table.table.table-hover.table-dark.table-striped.mytable
@@ -25,15 +25,15 @@ block content
             th 删除
           tbody
             each item in users 
-              tr(class="item-id-#{item._id}")
+              tr(class="item-id-"+item._id)
                 td #{item.uid}
                 td #{item.password}
                 td #{moment(item.meta.updateAt).format('MM/DD HH:MM')}
                 td #{item.state}
                 td #{item.notice}
-                td: a.btn.btn-outline-warning.btn-sm.del(target="_blank",href="../../movie/#{item._id}") 更新 
+                td: a.btn.btn-outline-warning.btn-sm.del(target="_blank",href="../admin/updateuser/" + item._id) 更新状态 
                 td 
-                  button.btn.btn-outline-danger.btn-sm.del(type="button",data-id="#{item._id}") 删除
+                  button.btn.btn-outline-danger.btn-sm.del(type="button",data-id=item._id) 删除
     .row
       .col-12 
         span &nbsp;
