user CRUD completed

--- a/location/views/pages/newuser.pug
+++ b/location/views/pages/newuser.pug
@@ -23,7 +23,7 @@ block content
           .form-group.row
             label.col-sm-2.col-form-label(for="inputPassword") 密码
             .col-sm-10
-              input#inputDirector.form-control(type="text", name="user[password]", value=user.director)
+              input#inputDirector.form-control(type="text", name="user[password]", value=user.password)
           .form-group.row
             label.col-sm-2.col-form-label(for="inputState") 状态
             .col-sm-10
