--- a/location/views/pages/admin.pug
+++ b/location/views/pages/admin.pug
@@ -9,7 +9,7 @@ block content
         p &nbsp;
     .row.justify-content-end.admin-adduser
       .col-2
-        button.btn.btn-outline-dark.btn-block 刷 新
+        button.btn.btn-outline-dark.btn-block#refresh 刷 新
       .col-2
         a.btn.btn-outline-dark.btn-block(href="/admin/newuser") 新 增 
     .row.justify-content-center
@@ -28,10 +28,10 @@ block content
               tr(class="item-id-"+item._id)
                 td #{item.uid}
                 td #{item.password}
-                td #{moment(item.meta.updateAt).format('MM/DD HH:MM')}
+                td #{moment(item.meta.updateAt).format('MM/DD HH:mm')}
                 td #{item.state}
                 td #{item.notice}
-                td: a.btn.btn-outline-warning.btn-sm.del(target="_blank",href="../admin/updateuser/" + item._id) 更新状态 
+                td: a.btn.btn-outline-warning.btn-sm(target="_blank",href="../admin/updateuser/" + item._id) 更新状态 
                 td 
                   button.btn.btn-outline-danger.btn-sm.del(type="button",data-id=item._id) 删除
     .row
