--- a/location/views/pages/locateuser.pug
+++ b/location/views/pages/locateuser.pug
@@ -27,17 +27,13 @@ html
           <option value="尼泊尔">尼泊尔</option>
           <option value="哈萨克斯坦">哈萨克斯坦</option>
           <option value="菲律宾">菲律宾</option>
-          <option value="台湾">台湾</option>
+          <option value="中国台湾">台湾</option>
           <option value="中国大陆">中国大陆</option>
           <option value="伊朗">伊朗</option>
-          <option value="哥斯达黎加">哥斯达黎加</option>
           <option value="古巴">古巴</option>
           <option value="墨西哥">墨西哥</option>
           <option value="巴拿马">巴拿马</option>
-          <option value="洪都拉斯">洪都拉斯</option>
           <option value="危地马拉">危地马拉</option>
-          <option value="格鲁吉亚">格鲁吉亚</option>
-          <option value="安哥拉">安哥拉</option>
           <option value="白俄罗斯">白俄罗斯</option>
           <option value="俄罗斯联邦">俄罗斯联邦</option>
           <option value="乌克兰">乌克兰</option>
@@ -54,12 +50,9 @@ html
           <option value="爱沙尼亚">爱沙尼亚</option>
           <option value="立陶宛">立陶宛</option>
           <option value="土耳其">土耳其</option>
-          <option value="斯洛文尼亚">斯洛文尼亚</option>
           <option value="捷克共和国">捷克共和国</option>
           <option value="非洲其他国家(地区)">非洲其他国家(地区)</option>
           <option value="斯洛伐克">斯洛伐克</option>
-          <option value="马其顿">马其顿</option>
-          <option value="梵蒂冈城国">梵蒂冈城国</option>
           <option value="荷兰">荷兰</option>
           <option value="克罗地亚">克罗地亚</option>
           <option value="希腊">希腊</option>
@@ -74,74 +67,41 @@ html
           <option value="葡萄牙">葡萄牙</option>
           <option value="波兰">波兰</option>
           <option value="西班牙">西班牙</option>
-          <option value="阿尔巴尼亚">阿尔巴尼亚</option>
-          <option value="津巴布韦">津巴布韦</option>
-          <option value="安道尔">安道尔</option>
           <option value="奥地利">奥地利</option>
-          <option value="保加利亚">保加利亚</option>
           <option value="芬兰">芬兰</option>
-          <option value="直布罗陀">直布罗陀</option>
-          <option value="百慕大">百慕大</option>
           <option value="加拿大">加拿大</option>
-          <option value="几内亚">几内亚</option>
           <option value="美国">美国</option>
           <option value="格陵兰">格陵兰</option>
           <option value="北美洲其他国家(地区)">北美洲其他国家(地区)</option>
           <option value="澳大利亚">澳大利亚</option>
-          <option value="塞拉利昂">塞拉利昂</option>
-          <option value="萨摩亚">萨摩亚</option>
-          <option value="马绍尔群岛">马绍尔群岛</option>
           <option value="新西兰">新西兰</option>
           <option value="斐济">斐济</option>
-          <option value="巴布亚新几内亚">巴布亚新几内亚</option>
           <option value="喀麦隆">喀麦隆</option>
           <option value="大洋洲其他国家(地区)">大洋洲其他国家(地区)</option>
           <option value="智利">智利</option>
           <option value="哥伦比亚">哥伦比亚</option>
-          <option value="巴拉圭">巴拉圭</option>
-          <option value="秘鲁">秘鲁</option>
-          <option value="苏里南">苏里南</option>
           <option value="委内瑞拉">委内瑞拉</option>
-          <option value="乌拉圭">乌拉圭</option>
-          <option value="厄瓜多尔">厄瓜多尔</option>
-          <option value="加纳">加纳</option>
-          <option value="巴哈马">巴哈马</option>
           <option value="开曼群岛">开曼群岛</option>
           <option value="海地">海地</option>
           <option value="牙买加">牙买加</option>
           <option value="坦桑尼亚">坦桑尼亚</option>
           <option value="南美洲其他国家(地区)">南美洲其他国家(地区)</option>
-          <option value="圣皮埃尔和密克隆">圣皮埃尔和密克隆</option>
           <option value="阿根廷">阿根廷</option>
           <option value="玻利维亚">玻利维亚</option>
           <option value="巴西">巴西</option>
-          <option value="圣卢西亚">圣卢西亚</option>
-          <option value="索马里">索马里</option>
-          <option value="乌干达">乌干达</option>
-          <option value="乍得">乍得</option>
-          <option value="几内亚(比绍)">几内亚(比绍)</option>
-          <option value="民主刚果">民主刚果</option>
           <option value="中非共和国">中非共和国</option>
           <option value="莱索托">莱索托</option>
           <option value="刚果">刚果</option>
           <option value="南非">南非</option>
           <option value="马达加斯加">马达加斯加</option>
-          <option value="利比里亚">利比里亚</option>
-          <option value="突尼斯">突尼斯</option>
-          <option value="赞比亚">赞比亚</option>
-          <option value="尼日尔">尼日尔</option>
           <option value="西撒哈拉">西撒哈拉</option>
           <option value="纳米比亚">纳米比亚</option>
           <option value="莫桑比克">莫桑比克</option>
           <option value="埃塞俄比亚">埃塞俄比亚</option>
           <option value="卢旺达">卢旺达</option>
           <option value="摩洛哥">摩洛哥</option>
-          <option value="马拉维">马拉维</option>
           <option value="尼日利亚">尼日利亚</option>
-          <option value="佛得角">佛得角</option>
-          <option value="布隆迪">布隆迪</option>
           <option value="阿尔及利亚">阿尔及利亚</option>
-          <option value="冈比亚">冈比亚</option>
           <option value="赤道几内亚">赤道几内亚</option>
           <option value="苏丹">苏丹</option>
           <option value="肯尼亚">肯尼亚</option>
@@ -151,9 +111,7 @@ html
           <option value="乌兹别克斯坦">乌兹别克斯坦</option>
           <option value="巴林">巴林</option>
           <option value="日本">日本</option>
-          <option value="约旦">约旦</option>
           <option value="越南">越南</option>
-          <option value="吉尔吉斯斯坦">吉尔吉斯斯坦</option>
           <option value="泰国">泰国</option>
           <option value="斯里兰卡">斯里兰卡</option>
           <option value="阿联酋">阿联酋</option>
@@ -166,9 +124,6 @@ html
           <option value="埃及">埃及</option>
           <option value="中国香港">中国香港</option>
           <option value="伊拉克">伊拉克</option>
-          <option value="黎巴嫩">黎巴嫩</option>
-          <option value="科威特">科威特</option>
-          <option value="文莱">文莱</option>
           <option value="马尔代夫">马尔代夫</option>
           <option value="印度尼西亚">印度尼西亚</option>
           <option value="以色列">以色列</option>
