--- a/location/app/views/pages/newuser.pug
+++ b/location/app/views/pages/newuser.pug
@@ -13,7 +13,7 @@ block content
           p &nbsp;
     .row.justify-content-center
       .col-6.newuser
-        form.form-horizonal(action="/admin/new", method="post")
+        form.form-horizonal(action="/admin/saveuser", method="post")
           if user._id
             input(type="hidden",name="user[_id]",value=user._id)
           .form-group.row
