--- a/location/app/views/pages/admin.pug
+++ b/location/app/views/pages/admin.pug
@@ -17,6 +17,7 @@ block content
         table.table.table-hover.table-dark.table-striped.mytable
           thead 
             th UID
+            th 角色
             th 密码
             th 录入时间
             th 状态
@@ -27,13 +28,23 @@ block content
             each item in users 
               tr(class="item-id-"+item._id)
                 td #{item.uid}
+                if item.uid == 1000
+                  td 
+                    span.text-primary 管理员
+                else 
+                  td 分发者
                 td #{item.password}
                 td #{moment(item.meta.updateAt).format('MM/DD HH:mm')}
-                td #{item.state}
+                if item.state == 0
+                  td 
+                    span.text-danger 已冻结
+                else
+                  td 
+                    span.text-success 正常
                 td #{item.notice}
                 td: a.btn.btn-outline-warning.btn-sm(target="_blank",href="../admin/updateuser/" + item._id) 更新状态 
                 td 
-                  button.btn.btn-outline-danger.btn-sm.del(type="button",data-id=item._id) 删除
+                  button.btn.btn-outline-danger.btn-sm.del(type="button",data-id=item._id) 删除账号
     .row
       .col-12 
         span &nbsp;
